--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ sup {
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
 }
+.nav{ 
+    flex-wrap: nowrap;
+    align-items: center;
+}
 .nav .nav-item.active {
     background-color: #80808024;
 }
@@ -33,6 +37,9 @@ sup {
 .nav .nav-item {
     border-radius: 5px;
     background-color: #80808024;
+    min-width: 150px;
+    display: flex;
+    justify-content: center;
 }
 .nav .nav-link {
     color: black;
